se sube actualización

--- a/laboratorio-13/index.html
+++ b/laboratorio-13/index.html
@@ -12,7 +12,7 @@
      <h2 id="hola2">Hola Mundo</h2>
      <h2>Hola Mundo</h2>
      <h2 class="blue">Hola Mundo</h2>
-     <h2 class="blue">Hola Mundo</h2>
+     <h2 class="red">Hola Mundo</h2>
 </div>
     <h1 id="cambiarColor">Haz clic aquí para cambiar el color</h1>
     <script src="app.js"></script>
