--- a/practica-formulario/index.html
+++ b/practica-formulario/index.html
@@ -37,21 +37,24 @@
                     </div>
                     <div class="card-body">
                         <form >
+                          <div class="message">
+                          <!--<p>error</p>-->
+                         </div>
                             <div class="mb-3">
                                 <label for="nombre" class="form-label">Nombre:</label>
-                                <input type="text" class="form-control" id="nombre" name="nombre" required>
+                                <input type="text" class="form-control" id="nombre" name="nombre" >
                             </div>
                             <div class="mb-3">
                                 <label for="email" class="form-label">Correo Electrónico:</label>
-                                <input type="email" class="form-control" id="email" name="email" required>
+                                <input type="email" class="form-control" id="email" name="email" >
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Contraseña:</label>
-                                <input type="password" class="form-control" id="password" name="password" required>
+                                <input type="password"  class="form-control" id="password" name="password" >
                             </div>
                             <div class="mb-3">
                                 <label for="confirm_password" class="form-label">Confirmar Contraseña:</label>
-                                <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+                                <input type="password"  class="form-control" id="confirm_password" name="confirm_password" >
                             </div>
                             <div class="d-grid gap-2">
                                 <button type="submit" class="btn btn-primary">Registrarse</button>
@@ -62,7 +65,8 @@
             </div>
         </div>
     </div>
-
+    
+    <script src="/scripts/register.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
