--- a/practica-formulario/pages/login.html
+++ b/practica-formulario/pages/login.html
@@ -36,17 +36,17 @@
                         <h2>Iniciar Sesión</h2>
                     </div>
                     <div class="card-body">
-                        <form >
+                        <form id="login2">
                             <div class="mb-3">
                                 <label for="email" class="form-label">Correo Electrónico:</label>
-                                <input type="email" class="form-control" id="email" name="email" required>
+                                <input type="email"  class="form-control" id="email" name="email" required>
                             </div>
                             <div class="mb-3">
                                 <label for="password" class="form-label">Contraseña:</label>
-                                <input type="password" class="form-control" id="password" name="password" required>
+                                <input type="password"  class="form-control" id="password" name="password" required>
                             </div>
                             <div class="d-grid gap-2">
-                                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+                                <button id="btnform" type="submit" class="btn btn-primary">Iniciar Sesión</button>
                             </div>
                         </form>
                     </div>
@@ -54,7 +54,7 @@
             </div>
         </div>
     </div>
-
+    <script src="../scripts/login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
