Se añaden páginas auxiliares

--- a/portafolio/courses.html
+++ b/portafolio/courses.html
@@ -36,9 +36,122 @@
   </div>
 </nav>
 
-<!-- Tarjetas con imágenes -->
 <section class="container py-5">
- 
+<h2 class="text-center mb-5">Cursos Certificados</h2>
+
+    <div class="row g-4">
+      <div class="col-6">
+        <div class="card curso-card p-3 d-flex flex-row align-items-center">
+          <div class="curso-img me-4">
+            <img src="images/ibm-logo-0.png" alt="IBM_logo" class="img-fluid rounded">
+          </div>
+          <div>
+            <h5 class="mb-1">Introduction to HTML, CSS, & JavaScript</h5>
+            <p class="mb-1">Por IBM</p>
+            <p class="mb-1">Plataforma: Coursera</p>
+            <a href="https://coursera.org/verify/SJUR2SQTZ2BT" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6">
+        <div class="card curso-card p-3 d-flex flex-row align-items-center">
+          <div class="curso-img me-4">
+            <img src="images/ibm-logo-0.png" alt="IBM_logo" class="img-fluid rounded">
+          </div>
+          <div>
+            <h5 class="mb-1">Introduction to Software Engineering</h5>
+            <p class="mb-1">Por: IBM</p>
+            <p class="mb-1">Plataforma: Coursera</p>
+            <a href="https://coursera.org/verify/HIMZB0FK11FV" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6">
+        <div class="card curso-card p-3 d-flex flex-row align-items-center">
+          <div class="curso-img me-4">
+            <img src="images/Google_logo.png" alt="Google_logo" class="img-fluid rounded">
+          </div>
+          <div>
+            <h5 class="mb-1">Google Prompting Essentials</h5>
+            <p class="mb-1">Por: Google</p>
+            <p class="mb-1">Plataforma: Coursera</p>
+            <a href="https://coursera.org/verify/specialization/PFQGRIGR5U41" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-6">
+        <div class="card curso-card p-3 d-flex flex-row align-items-center">
+          <div class="curso-img me-4">
+            <img src="/images/sas.png" alt="SAS_logo" class="img-fluid rounded">
+          </div>
+          <div>
+            <h5 class="mb-1">SAS Programmer</h5>
+            <p class="mb-1">SAS Institute</p>
+            <p class="mb-1">Plataforma: Coursera</p>
+            <a href="https://coursera.org/verify/specialization/2TEHJMLN7CVT" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="card curso-card p-3 d-flex flex-row align-items-center">
+          <div class="curso-img me-4">
+            <img src="/images/sas.png" alt="SAS_logo" class="img-fluid rounded">
+          </div>
+          <div>
+            <h5 class="mb-1">SAS Visual Business Analytics</h5>
+            <p class="mb-1">SAS Institute</p>
+            <p class="mb-1">Plataforma: Coursera</p>
+            <a href="https://coursera.org/verify/specialization/73W9BYCXQMZT" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="card curso-card p-3 d-flex flex-row align-items-center">
+          <div class="curso-img me-4">
+            <img src="images/mac_uni.png" alt="Macquarie_University_logo" class="img-fluid rounded">
+          </div>
+          <div>
+            <h5 class="mb-1">Excel Skills for Business</h5>
+            <p class="mb-1">Por: Macquarie University</p>
+            <p class="mb-1">Plataforma: Coursera</p>
+            <a href="https://coursera.org/verify/specialization/GJNV363XSLZQ" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
+          </div>
+        </div>
+        </div>
+      <div class="col-6">
+        <div class="card curso-card p-3 d-flex flex-row align-items-center">
+          <div class="curso-img me-4">
+            <img src="images/mac_uni.png" alt="Macquarie_University_logo" class="img-fluid rounded">
+          </div>
+          <div>
+            <h5 class="mb-1">Excel Skills for Business Forecasting</h5>
+            <p class="mb-1">Por: Macquarie University</p>
+            <p class="mb-1">Plataforma: Coursera</p>
+            <a href="https://coursera.org/verify/specialization/HBK7A8MMH8J6" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="card curso-card p-3 d-flex flex-row align-items-center">
+          <div class="curso-img me-4">
+            <img src="images/Microsoft-Logo-3.jpg" alt="microsoft_logo" class="img-fluid rounded">
+          </div>
+          <div>
+            <h5 class="mb-1">Data Analysis and Visualization with Power BI</h5>
+            <p class="mb-1">Por: Microsoft</p>
+            <p class="mb-1">Plataforma: Coursera</p>
+            <a href="https://coursera.org/verify/UPYPUEVI4X6N" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
+          </div>
+        </div>
+      </div>
+
+  </div>
+
+
+
 </section>
 
 <!-- Footer -->
