--- a/portafolio/experience.html
+++ b/portafolio/experience.html
@@ -36,9 +36,37 @@
   </div>
 </nav>
 
-<!-- Tarjetas con imágenes -->
+
 <section class="container py-5">
- 
+    <div class="mb-5">
+      <h2 class="text-center mb-3">Experiencia Profesional</h2>
+      <p class="text-center mx-auto" style="max-width: 800px;">
+        A lo largo de mi trayectoria profesional he colaborado en equipos multidisciplinarios que me han permitido desarrollar mis habilidades blandas y fortalecer mis conocimientos técnicos.
+      </p>
+    </div>
+    
+    <div class="row align-items-center mb-5">
+      <div class="col-md-4 text-center mb-3 mb-md-0">
+        <img src="/images/logo_sat.png" alt="logo_sat" class="exp-img img-fluid">
+      </div>
+      <div class="col-md-8">
+        <h4>Analista de Datos y de TI- Servicio de Administración Tributaria (SAT).</h4>
+        <p>
+          Desarrollé dashboards interactivos en Power BI para visualizar el impacto de programas sociales. Automaticé reportes que ayudarpan en mejorar la toma de decisiones respecto al personal de TI del SAT en todo el país mediante visualizaciones claras y accesibles.
+        </p>
+      </div>
+    </div>
+    <div class="row align-items-center mb-5">
+      <div class="col-md-4 text-center mb-3 mb-md-0">
+        <img src="images/h&b_spa.jpg" alt="h&B" class="exp-img img-fluid">
+      </div>
+      <div class="col-md-8">
+        <h4>Desarrollador Frontend - H&B Spa Jardín Balbuena.</h4>
+        <p>
+          Participé en el diseño e implementación de interfaces web para la atracción de clientes en el Spa y la mejora en sus ventas. Mi enfoque estuvo en crear experiencias visuales fluidas, integrando ilustraciones personalizadas y generando ideas visuales que agradaran al cliente. 
+        </p>
+      </div>
+    </div>
 </section>
 
 <!-- Footer -->
