--- a/portafolio/skills.html
+++ b/portafolio/skills.html
@@ -36,9 +36,99 @@
   </div>
 </nav>
 
-<!-- Tarjetas con imágenes -->
 <section class="container py-5">
- 
+
+    <div class="mb-5">
+      <h2 class="text-center mb-4">Habilidades en Desarrollo Web</h2>
+      <div class="row g-4 justify-content-center">
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="images/html_logo.png" alt="HTML" class="skill-icon mb-2">
+            <h5>HTML5</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="images/Bootstrap_logo.png" alt="Bootstrap" class="skill-icon mb-2">
+            <h5>Bootstrap</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="images/css_logo.png" alt="CSS" class="skill-icon mb-2">
+            <h5>CSS3</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="images/Git_icon.png" alt="JavaScript" class="skill-icon mb-2">
+            <h5>Git</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="images/github.png" alt="Github" class="skill-icon mb-2">
+            <h5>Github</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="images/JavaScript-Logo.png" alt="JavaScript" class="skill-icon mb-2">
+            <h5>JavaScript</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="images/java_logo.png" alt="Java" class="skill-icon mb-2">
+            <h5>Java</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    
+    <div class="mb-5">
+      <h2 class="text-center mb-4">Habilidades como Analista de Datos</h2>
+      <div class="row g-4 justify-content-center">
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="/images/power_bi.png" alt="Power BI" class="skill-icon mb-2">
+            <h5>Power BI</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="/images/tableau.png" alt="Power BI" class="skill-icon mb-2">
+            <h5>Tableau</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="/images/sql.png" alt="SQL" class="skill-icon mb-2">
+            <h5>SQL</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="/images/R_logo.png" alt="Power BI" class="skill-icon mb-2">
+            <h5>R</h5>
+          </div>
+        </div>
+        <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="/images/sas.png" alt="SAS" class="skill-icon mb-2">
+            <h5>SAS</h5>
+          </div>
+          </div>
+           <div class="col-md-3 col-sm-6">
+          <div class="card skill-card text-center p-3">
+            <img src="/images/excel.png" alt="Excel" class="skill-icon mb-2">
+            <h5>Excel</h5>
+          </div>
+        </div>
+        </div>
+    </div>
+
 </section>
 
 <!-- Footer -->
