se actualiza blog

--- a/portafolio/blog.html
+++ b/portafolio/blog.html
@@ -38,7 +38,93 @@
 
 <!-- Tarjetas con imágenes -->
 <section class="container py-5">
- 
+
+  <h2 class="text-center mb-5">Consejos y algo más sobre mí</h2>
+
+<div class="row g-4">
+  <!-- Artículo 1 -->
+  <div class="col-md-4">
+    <div class="card blog-card h-100">
+      <img src="/images/articulo_1.png" class="card-img-top" alt="Artículo 1">
+      <div class="card-body d-flex flex-column">
+        <h5 class="card-title">¿Seguridad e IA?</h5>
+        <p class="card-text">Exploro cómo integrar elementos visuales latinoamericanos en proyectos web para transmitir autenticidad y pertenencia.</p>
+        <button class="mt-auto btn btn-blog" data-bs-toggle="modal" data-bs-target="#modalBlog1">Leer más</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Artículo 2 -->
+  <div class="col-md-4">
+    <div class="card blog-card h-100">
+      <img src="/images/articulo_2.png" class="card-img-top" alt="Artículo 2">
+      <div class="card-body d-flex flex-column">
+        <h5 class="card-title">Dar clases en la era digital</h5>
+        <p class="card-text">Una guía práctica para transformar datos en narrativas visuales que conectan con la audiencia y generan impacto.</p>
+        <button class="mt-auto btn btn-blog" data-bs-toggle="modal" data-bs-target="#modalBlog2">Leer más</button>
+      </div>
+    </div>
+  </div>
+
+  <!-- Artículo 3 -->
+  <div class="col-md-4">
+    <div class="card blog-card h-100">
+      <img src="/images/articulo_3.png" class="card-img-top" alt="Artículo 3">
+      <div class="card-body d-flex flex-column">
+        <h5 class="card-title">Te cuento mis pasatiempos</h5>
+        <p class="card-text">Reflexiono sobre cómo lograr transiciones suaves y coherencia estética sin recurrir a separaciones rígidas.</p>
+        <button class="mt-auto btn btn-blog" data-bs-toggle="modal" data-bs-target="#modalBlog3">Leer más</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Artículo 1 -->
+<div class="modal fade" id="modalBlog1" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">¿Seguridad e IA?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p>En este artículo comparto cómo elementos visuales como paletas, texturas y símbolos latinoamericanos pueden integrarse en interfaces web para transmitir autenticidad, pertenencia y sensibilidad cultural. Analizo ejemplos reales y propongo estrategias para diseñar con identidad.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="modalBlog2" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Dar clases en la era digital</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p>La visualización de datos no solo informa: también emociona. En este artículo muestro cómo usar Power BI para construir narrativas visuales que conecten con el usuario, desde dashboards interactivos hasta mapas de impacto social. Incluye ejemplos y buenas prácticas.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Artículo 3 -->
+<div class="modal fade" id="modalBlog3" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Te cuento mis pasatiempos</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <p>¿Cómo lograr fluidez visual sin recurrir a bloques rígidos? En este artículo reflexiono sobre el diseño sin divisiones, usando transiciones suaves, paletas armónicas y jerarquía visual para guiar al usuario sin interrupciones. Ideal para portafolios y sitios narrativos.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </section>
 
 <!-- Footer -->
