Se actualiza blog y about me

--- a/portafolio/about_me.html
+++ b/portafolio/about_me.html
@@ -30,7 +30,6 @@
         <li class="nav-item"><a class="nav-link" href="/experience.html">Experiencia</a></li>
         <li class="nav-item"><a class="nav-link" href="/courses.html">Cursos</a></li>
         <li class="nav-item"><a class="nav-link" href="/blog.html">Blog</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact.html">Contacto</a></li>
       </ul>
     </div>
   </div>
@@ -51,11 +50,20 @@
         Soy un desarrollador web full-stack con enfoque en diseño web, y un analista de datos especializado en visualización de datos y experiencias interactivas. Me apasiona crear interfaces que reflejen identidad cultural y armonía visual, sin dejar de lado la comunicación de ideas e insights del cliente y del negocio.  
       </p>
       <p>
-        
-      </p>
-      <p>
         Este portafolio es una muestra de mi trabajo, donde cada sección está pensada para comunicar autenticidad y una narrativa visual coherente.
       </p>
+      <h3 class="mb-3 text-center">Contáctame en los siguientes medios:</h3>
+      <div class="social-icons flex-column text-center">
+      <a href="https://www.linkedin.com/in/juanpemarc" target="_blank" class="me-3 icon-link">
+        <i class="bi bi-linkedin"></i>
+      </a>
+      <a href="https://github.com/juanperez1710" target="_blank" class="me-3 icon-link">
+        <i class="bi bi-github"></i>
+      </a>
+      <a href="mailto:juanperezmarcelo961@gmail.com" class="icon-link">
+        <i class="bi bi-envelope-fill"></i>
+      </a>
+    </div>
     </div>
   </div>
 
