--- a/portafolio/courses.html
+++ b/portafolio/courses.html
@@ -30,7 +30,6 @@
         <li class="nav-item"><a class="nav-link" href="/experience.html">Experiencia</a></li>
         <li class="nav-item"><a class="nav-link" href="/courses.html">Cursos</a></li>
         <li class="nav-item"><a class="nav-link" href="/blog.html">Blog</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact.html">Contacto</a></li>
       </ul>
     </div>
   </div>
@@ -89,7 +88,7 @@
           </div>
           <div>
             <h5 class="mb-1">SAS Programmer</h5>
-            <p class="mb-1">SAS Institute</p>
+            <p class="mb-1">Por: SAS Institute</p>
             <p class="mb-1">Plataforma: Coursera</p>
             <a href="https://coursera.org/verify/specialization/2TEHJMLN7CVT" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
           </div>
@@ -102,7 +101,7 @@
           </div>
           <div>
             <h5 class="mb-1">SAS Visual Business Analytics</h5>
-            <p class="mb-1">SAS Institute</p>
+            <p class="mb-1">Por: SAS Institute</p>
             <p class="mb-1">Plataforma: Coursera</p>
             <a href="https://coursera.org/verify/specialization/73W9BYCXQMZT" target="_blank" class="btn btn-sm btn-certificado">Verificar certificado</a>
           </div>
