--- a/portafolio/skills.html
+++ b/portafolio/skills.html
@@ -30,7 +30,6 @@
         <li class="nav-item"><a class="nav-link" href="/experience.html">Experiencia</a></li>
         <li class="nav-item"><a class="nav-link" href="/courses.html">Cursos</a></li>
         <li class="nav-item"><a class="nav-link" href="/blog.html">Blog</a></li>
-        <li class="nav-item"><a class="nav-link" href="/contact.html">Contacto</a></li>
       </ul>
     </div>
   </div>
@@ -39,7 +38,7 @@
 <section class="container py-5">
 
     <div class="mb-5">
-      <h2 class="text-center mb-4">Habilidades en Desarrollo Web</h2>
+      <h2 class="text-center mb-4">Skills en Desarrollo Web</h2>
       <div class="row g-4 justify-content-center">
         <div class="col-md-3 col-sm-6">
           <div class="card skill-card text-center p-3">
@@ -88,7 +87,7 @@
 
     
     <div class="mb-5">
-      <h2 class="text-center mb-4">Habilidades como Analista de Datos</h2>
+      <h2 class="text-center mb-4">Skills en Análisis de Datos</h2>
       <div class="row g-4 justify-content-center">
         <div class="col-md-3 col-sm-6">
           <div class="card skill-card text-center p-3">
